--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,6 @@
     </array>
     <string name="title_activity_create_session">CreateSessionActivity</string>
     <string name="title_activity_add_words_to_session">Add Words</string>
+    <string name="initialising_for_first_use">Initialising for first use</string>
 
 </resources>
